Fix npm scripts and documentation

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "react-scripts": "1.0.10"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "cra:start": "react-scripts start",
+    "cra:build": "react-scripts build",
+    "cra:test": "react-scripts test --env=jsdom",
+    "cra:eject": "react-scripts eject",
+    "start": "npm run styleguide",
+    "build": "npm run styleguide:build",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build"
   },
