--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "start": "npm run styleguide",
     "build": "npm run styleguide:build",
     "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "styleguide:build": "styleguidist build",
+    "lint:css": "stylelint './src/**/*.js'"
   },
   "devDependencies": {
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
     "react-styleguidist": "^6.0.8",
-    "styled-components": "^2.1.1"
+    "styled-components": "^2.1.1",
+    "stylelint": "^8.0.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-processor-styled-components": "^0.2.1"
   }
 }
