--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
+    "gh-pages": "^1.0.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
@@ -49,7 +50,8 @@
     "build:styleguide": "styleguidist build",
     "test": "node scripts/test.js --env=jsdom",
     "styleguide": "styleguidist server",
-    "lint:css": "stylelint './src/**/*.js'"
+    "lint:css": "stylelint './src/**/*.js'",
+    "deploy": "npm run build:styleguide && gh-pages --dist styleguide --message 'Auto-generated commit'"
   },
   "devDependencies": {
     "normalize.css": "^7.0.0",
